Can remove panel for serverspec-gen

--- a/app/views/serverspecs/_gen_it.html.erb
+++ b/app/views/serverspecs/_gen_it.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <button class="btn btn-danger pull-right btn-xs" @click="$parent.removeIt(idx)"><span class="glyphicon glyphicon-remove"></span></button>
+    <button class="btn btn-danger pull-right btn-xs" @click="$parent.removeIt(it)"><span class="glyphicon glyphicon-remove"></span></button>
 
     <!--what's this?-->
     <span class="pull-right">&nbsp&nbsp</span>
