--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -16,7 +16,7 @@
       </button>
 
       <div v-for="desc in ast">
-        <resource-panel :desc.sync="desc" :idx="$index" :serverspec_info="info"></resource-panel>
+        <resource-panel :desc.sync="desc" :serverspec_info="info"></resource-panel>
       </div>
     </div>
 
