Enable to work ELB tab-pane

--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -2,7 +2,7 @@
 
 <div class="col-sm-12">
   <h4 class="page-header">DNS name</h4>
-  <a v-attr="href: 'http://' + dns_name" target="_blank">{{dns_name}}</a>
+  <a :href="'http://' + dns_name" target="_blank">{{dns_name}}</a>
 
   <h4 class="page-header"><%=t('ec2_instances.listeners')%></h4>
   <table class="table table-striped">
@@ -18,20 +18,25 @@
     </thead>
 
     <tbody>
-      <tr v-repeat="listeners">
-        <td v-text="protocol"></td>
-        <td v-text="load_balancer_port"></td>
-        <td v-text="instance_protocol"></td>
-        <td v-text="instance_port"></td>
-        <td v-text="ssl_certificate_id_to_name(ssl_certificate_id)"></td>
+      <tr v-for="l in listeners">
+        <td v-text="l.protocol"></td>
+        <td v-text="l.load_balancer_port"></td>
+        <td v-text="l.instance_protocol"></td>
+        <td v-text="l.instance_port"></td>
+        <td v-text="ssl_certificate_id_to_name(l.ssl_certificate_id)"></td>
         <td>
-          <button v-on="click: set_edit_listener_modal_default_value(protocol, load_balancer_port, instance_protocol, instance_port, ssl_certificate_id)" class="btn btn-xs btn-default" data-toggle="modal" role="button" href="#edit-listener-modal"><%=t('helpers.links.edit')%></button>
-          <button v-on="click: delete_listener(load_balancer_port)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
+          <button
+            @click="set_edit_listener_modal_default_value(l.protocol, l.load_balancer_port, l.instance_protocol, l.instance_port, l.ssl_certificate_id)"
+            class="btn btn-xs btn-default" data-toggle="modal"
+            role="button" href="#edit-listener-modal">
+            <%=t('helpers.links.edit')%>
+          </button>
+          <button @click="delete_listener(l.load_balancer_port)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
         </td>
       </tr>
     </tbody>
   </table>
-  <button v-on="click: set_create_listener_modal_default_value()" class="btn btn-default" data-toggle="modal" role="button" href="#create-listener-modal"><%=t('ec2_instances.btn.create_to_elb_listener')%></button>
+  <button @click="set_create_listener_modal_default_value()" class="btn btn-default" data-toggle="modal" role="button" href="#create-listener-modal"><%=t('ec2_instances.btn.create_to_elb_listener')%></button>
 
   <h4 class="page-header"><%=t('ec2_instances.certificate')%></h4>
   <table class="table table-striped">
@@ -42,11 +47,11 @@
     </thead>
 
     <tbody>
-      <tr v-repeat="server_certificates">
-        <td v-text="name"></td>
-        <td v-text="expiration_date(expiration)"></td>
+      <tr v-for="s in server_certificates">
+        <td v-text="s.name"></td>
+        <td v-text="expiration_date(s.expiration)"></td>
         <td>
-          <button v-on="click: delete_server_certificate(name)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
+          <button @click="delete_server_certificate(s.name)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
         </td>
       </tr>
     </tbody>
@@ -55,16 +60,16 @@
 
 
   <h4 class="page-header"><%=t('ec2_instances.instances')%></h4>
-  <div class="col-md-4 col-sm-6 col-xs-12" v-repeat="e: ec2_instances">
-    <div class="panel" v-class="panel_class(e.state)">
+  <div class="col-md-4 col-sm-6 col-xs-12" v-for="e in ec2_instances">
+    <div class="panel" :class="panel_class(e.state)">
       <div class="panel-heading">
-          <a href="#" v-on="click: show_ec2(e.instance_id)">{{* e.instance_id}}</a>&nbsp;
+          <a href="#" @click="show_ec2(e.instance_id)">{{* e.instance_id}}</a>&nbsp;
       </div>
       <table class="table">
         <tbody>
           <tr>
             <th><%=t('ec2_instances.state')%></td>
-            <td><span class="label" v-class="label_class(e.state)">{{* e.state}}</span></td>
+            <td><span class="label" :class="label_class(e.state)">{{* e.state}}</span></td>
           </tr>
           <tr>
             <th><%=t('ec2_instances.reason_code')%></td>
@@ -77,7 +82,7 @@
         </tbody>
       </table>
       <div class="panel-footer">
-        <button class="btn btn-danger btn-xs" v-on="click: deregister(e.instance_id)"><%= I18n.t('ec2_instances.btn.deregister') %></button>
+        <button class="btn btn-danger btn-xs" @click="deregister(e.instance_id)"><%= I18n.t('ec2_instances.btn.deregister') %></button>
       </div>
     </div>
   </div>
@@ -86,10 +91,10 @@
     <div class="input-group col-xs-12 col-sm-5">
       <select class="form-control input-sm" v-model="selected_ec2">
         <option>Select!</option>
-        <option v-repeat="unregistereds" v-attr="value: physical_id">{{* screen_name}}</option>
+        <option v-for="x in unregistereds" :value="x.physical_id">{{* x.screen_name}}</option>
       </select>
       <div class="input-group-btn">
-        <button class="btn btn-primary btn-sm" v-on="click: register()" v-attr="disabled: !selected_ec2">
+        <button class="btn btn-primary btn-sm" @click="register()" :disabled="!selected_ec2">
           <%= I18n.t('ec2_instances.btn.register') %>
         </button>
       </div>
@@ -109,19 +114,19 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.protocol') %></label>
-        <select v-model="protocol" v-on="change: change_listener_protocol()" class="form-control">
+        <select v-model="protocol" @change="change_listener_protocol()" class="form-control">
           <option value="HTTP">HTTP</option>
           <option value="HTTPS">HTTPS(Secure HTTP)</option>
           <option value="TCP">TCP</option>
           <option value="SSL">SSL(Secure TCP)</option>
         </select>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.lb_port') %></label>
         <input type="number" min="0" max="65535" v-model="load_balancer_port" class="form-control" />
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_protocol') %></label>
         <select v-model="instance_protocol" class="form-control">
@@ -131,25 +136,25 @@
           <option value="SSL">SSL(Secure TCP)</option>
         </select>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_port') %></label>
         <input type="number" min="0" max="65535" v-model="instance_port" class="form-control" />
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
-        <select v-model="ssl_certificate_id" v-attr="disabled: protocol!=='HTTPS'&&protocol!=='SSL'" class="form-control" options="server_certificate_name_items">
+        <select v-model="ssl_certificate_id" :disabled="protocol!=='HTTPS'&&protocol!=='SSL'" class="form-control" options="server_certificate_name_items">
           <option value=""><%= t('ec2_instances.none') %></option>
         </select>
       </div>
-      
+
       <div class="modal-footer">
         <div v-if="!loading">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
-          <button v-on="click: create_listener()" class="btn btn-primary"><%= t('helpers.links.new') %></button>
+          <button @click="create_listener()" class="btn btn-primary"><%= t('helpers.links.new') %></button>
         </div>
-        <div-loader v-if="loading"></div-loader>
+        <div-loader v-else></div-loader>
       </div>
     </div>
   </div>
@@ -167,19 +172,19 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.protocol') %></label>
-        <select v-model="protocol" v-on="change: change_listener_protocol()" id="edit_listener_protocol" class="form-control">
+        <select v-model="protocol" @change="change_listener_protocol()" id="edit_listener_protocol" class="form-control">
           <option value="HTTP">HTTP</option>
           <option value="HTTPS">HTTPS(Secure HTTP)</option>
           <option value="TCP">TCP</option>
           <option value="SSL">SSL(Secure TCP)</option>
         </select>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.lb_port') %></label>
         <input type="number" min="0" max="65535" v-model="load_balancer_port" id="edit_listener_load_balancer_port" class="form-control" />
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_protocol') %></label>
         <select v-model="instance_protocol" id="edit_listener_instance_protocol" class="form-control">
@@ -189,25 +194,25 @@
           <option value="SSL">SSL(Secure TCP)</option>
         </select>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_port') %></label>
         <input type="number" min="0" max="65535" v-model="instance_port" id="edit_listener_instance_port" class="form-control" />
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
-        <select v-model="ssl_certificate_id" v-attr="disabled: protocol!=='HTTPS'&&protocol!=='SSL'" id="edit_listener_ssl_certificate_id" class="form-control" options="server_certificate_name_items">
+        <select v-model="ssl_certificate_id" :disabled="protocol!=='HTTPS'&&protocol!=='SSL'" id="edit_listener_ssl_certificate_id" class="form-control" options="server_certificate_name_items">
           <option value=""><%= t('ec2_instances.none') %></option>
         </select>
       </div>
-      
+
       <div class="modal-footer">
         <div v-if="!loading">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
-          <button v-on="click: update_listener()" class="btn btn-primary"><%= t('common.btn.update') %></button>
+          <button @click="update_listener()" class="btn btn-primary"><%= t('common.btn.update') %></button>
         </div>
-        <div-loader v-if="loading"></div-loader>
+        <div-loader v-else></div-loader>
       </div>
     </div>
   </div>
@@ -222,33 +227,33 @@
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title"><%= t('ec2_instances.btn.upload_certificate') %></h4>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
         <input v-model="server_certificate_name" class="form-control" />
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.private_key') %></label>
         <textarea v-model="private_key" class="form-control allow_textfile_drop" placeholder="<%= t('ec2_instances.msg.private_key_droppable') %>"></textarea>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.public_key_certificate') %></label>
         <textarea v-model="certificate_body" class="form-control allow_textfile_drop" placeholder="<%= t('ec2_instances.msg.public_key_certificate_droppable') %>"></textarea>
       </div>
-      
+
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_chain') %></label>
         <textarea v-model="certificate_chain" class="form-control allow_textfile_drop" placeholder="<%= t('ec2_instances.msg.certificate_chain_droppable') %>"></textarea>
       </div>
-      
+
       <div class="modal-footer">
         <div v-if="!loading">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
-          <button v-on="click: upload_server_certificate()" class="btn btn-primary"><%= t('helpers.links.new') %></button>
+          <button @click="upload_server_certificate()" class="btn btn-primary"><%= t('helpers.links.new') %></button>
         </div>
-        <div-loader v-if="loading"></div-loader>
+        <div-loader v-else></div-loader>
       </div>
     </div>
   </div>
