Enable to work edit monitoring tab-pane.

--- a/app/views/vue/_edit_monitoring_tabpane.html.erb
+++ b/app/views/vue/_edit_monitoring_tabpane.html.erb
@@ -72,16 +72,16 @@
         <th>Physical ID</th>
         <th>Linked</th>
         <th></th></tr>
-      <tr v-repeat="l: linked_resources">
+      <tr v-for="l in linked_resources">
         <td>{{l.resource}}</td>
         <td v-if="l.linked"><%= glyphicon 'ok text-success' %></td>
         <td v-if="!l.linked"><%= glyphicon 'remove text-danger' %></td>
         <td v-if="l.linked">
-          <a href="#" data-toggle="modal" v-on="click: edit_temp(l)" data-target="#edit-templates" class="btn btn-sm btn-default">
+          <a href="#" data-toggle="modal" @click="edit_temp(l)" data-target="#edit-templates" class="btn btn-sm btn-default">
             <%= glyphicon 'edit' %> <%= t 'monitoring.btn.edit' %></a>
         </td>
         <td v-if="!l.linked">
-          <a href="#" data-toggle="modal" v-on="click: edit_temp(l)" data-target="#edit-templates" class="btn btn-sm btn-primary">
+          <a href="#" data-toggle="modal" @click="edit_temp(l)" data-target="#edit-templates" class="btn btn-sm btn-primary">
             <%= glyphicon 'link' %> <%= t 'monitoring.btn.link' %></a>
         </td>
       </tr>
