--- a/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
@@ -19,7 +19,7 @@
       <div class="modal-footer">
         <div v-if="!loading_s">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
-          <button v-on="click: terminate_ec2()" data-dismiss="modal" class="btn btn-primary"><%= t('helpers.links.terminate') %></button>
+          <button @click="terminate_ec2()" data-dismiss="modal" class="btn btn-primary"><%= t('helpers.links.terminate') %></button>
         </div>
         <div-loader v-if="loading_s"></div-loader>
       </div>
