--- a/app/views/serverspecs/_gen_it.html.erb
+++ b/app/views/serverspecs/_gen_it.html.erb
@@ -15,14 +15,13 @@
     </div>
 
     <div class="form-group">
-      <selectable-input label="Matcher" :options="matcher_names" :selected.sync="it.matcher.name"></selectable-input>
+      <label>
+        Should/Should not <input type="checkbox" v-model="it.should">
+      </label>
     </div>
 
     <div class="form-group">
-      <label>
-        Should/Should not
-        <input type="checkbox" class="form-control" v-model="it.should">
-      </label>
+      <selectable-input label="Matcher" :options="matcher_names" :selected.sync="it.matcher.name"></selectable-input>
     </div>
   </div>
 </div>
