--- a/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
@@ -1,9 +1,9 @@
 <%# modal for change schedule %>
-<div id="detach-ec2-modal" class="modal" role="dialog" aria-hidden="true">
+<div id="detach-ec2-modal" class="modal fade" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
 
-      <div class="modal-header">
+      <div class="modal-header bg-warning">
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title">Terminate Instance #{{physical_id}}</h4>
       </div>
@@ -11,7 +11,11 @@
       <div class="modal-body">
         <h4 class="alert alert-warning"><%= glyphicon 'warning-sign' %> Warning</h4>
         <p>
-          This instance will be removed from SkyHopper service. But the instance will still be available on AWS.
+          <%= t('ec2_instances.msg.detach') %>
+          <ul>
+            <li>Zabbix</li>
+            <li>Chef</li>
+          </ul>
         </p>
       </div>
 
