--- a/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
 
-      <div class="modal-header">
+      <div class="modal-header bg-warning">
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title">Terminate Instance #{{physical_id}}</h4>
       </div>
@@ -11,15 +11,14 @@
       <div class="modal-body">
         <h4 class="alert alert-warning"><%= glyphicon 'warning-sign' %> Warning</h4>
         <p>
-          This instance will be removed from Skyhopper service. On an EBS-backed instance, the default action is for the root EBS volume to be deleted when the instance is terminated.
-          Storage on any local drives will be lost.
+          <%= t('ec2_instances.msg.terminate') %>
         </p>
       </div>
 
       <div class="modal-footer">
         <div v-if="!loading_s">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
-          <button @click="terminate_ec2()" data-dismiss="modal" class="btn btn-primary"><%= t('helpers.links.terminate') %></button>
+          <button @click="terminate_ec2()" data-dismiss="modal" class="btn btn-danger"><%= t('helpers.links.terminate') %></button>
         </div>
         <div-loader v-if="loading_s"></div-loader>
       </div>
