--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -41,4 +41,4 @@ var SERVERSPEC_INFO =  <%= @serverspec_info.to_json.html_safe %>
 <script id="resource-panel-template"   type="text/template"> <%= render 'gen_resource' %> </script>
 <script id="it-panel-template"         type="text/template"> <%= render 'gen_it' %> </script>
 <script id="selectable-input-template" type="text/template"> <%= render 'gen_selectable_input' %> </script>
-<script id="arg-list-template"         type="text/template"> <%= render 'gen_arg_list' %> </script>
+<script id="arg-li-template"           type="text/template"> <%= render 'gen_arg_li' %> </script>
