--- a/app/views/serverspecs/_gen_arg_li.html
+++ b/app/views/serverspecs/_gen_arg_li.html
@@ -1,6 +1,4 @@
-<ul>
-  <li v-for="arg in args">
-    {{arg}}&nbsp;
-    <input type="text" v-model="results[$index]['arg']">
-  </li>
-</ul>
+<li>
+  {{name}}&nbsp;
+  <input type="text" v-model="value">
+</li>
