--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -261,7 +261,8 @@
     <div>
       <%# わざと一行で書いてます %>
       <%# TODO: id をつけていないとスクロール出来ない。Vueでうまくやりたい %>
-      <pre id="cook-status" class="pre-progress"><samp v-text="chef_console_text"></samp></pre>
+      <!--<pre id="cook-status" class="pre-progress"><samp class="languange-powershell" v-text="chef_console_text"></samp></pre>-->
+      <div style="margin: 5px" autofocus v-ace="chef_console_text" :mode="mode" :lines="lines" :theme="theme" :options="options" name="description" id="add_modify_value"></div>
     </div>
   </div>
 </div>
