--- a/app/views/serverspecs/_gen_arg_li.html
+++ b/app/views/serverspecs/_gen_arg_li.html
@@ -1,4 +1,7 @@
 <li>
-  {{name}}&nbsp;
-  <input type="text" v-model="value">
+  <label>
+    <input type="checkbox" v-model="use" v-if="!forceUse">
+    {{name}}&nbsp;
+  </label>
+  <input type="text" v-model="value" :disabled="disabled">
 </li>
