--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -22,7 +22,7 @@
 
 
     <div class="col-xs-6">
-      <h2 class="page-header"><%=t('serverspecs.generator.generated')%></h2>
+      <h3><%=t('serverspecs.generator.generated')%></h3>
       <pre v-ace="rubyCode"><code v-text="rubyCode"></code></pre>
     </div>
   </div>
