selectable ec2 from avalable ec2 from AWS

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require bootstrap-datetimepicker.min
  *= require selectize.paper
  *= require fullcalendar
+ *= require font-awesome
  */
 
 @font-face {
