--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -26,7 +26,7 @@
 </table>
 
 <%= link_to new_users_admin_path, class: "btn btn-primary btn-sm" do %>
-  <span class="glyphicon glyphicon-plus-sign"></span> <%= t('users.btn.add') %>
+  <span class="fa fa-user-plus"></span> <%= t('users.btn.add') %>
 <% end %>
 
 <button class="btn btn-sm btn-default" id="sync_zabbix"><%= glyphicon("refresh") %> <%= t('users.btn.sync') %></button>
