--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -43,7 +43,7 @@
 <!-- demo root element -->
 
 <div id="indexElement" v-el:node>
-  <div class="input-group">
+  <div class="col-md-4 input-group">
       <input type="text" name="query" v-model="searchQuery" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
       <hr>
   </div>
