--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -40,7 +40,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="key_pair in key_pairs" v-show="is_selected(key_pair.region)">
+        <tr v-for="key_pair in key_pairs | paginate" v-show="is_selected(key_pair.region)">
           <td>{{key_pair.name}}</td>
           <td>{{key_pair.fingerprint}}</td>
           <td>{{key_pair.region}}</td>
@@ -55,5 +55,13 @@
         </tr>
       </tbody>
     </table>
+
+    <nav v-if="key_pairs.length >= 10">
+      <ul class="pager">
+        <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
+        <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="key_pairs.length / pages  | roundup"></span>
+        <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
+      </ul>
+    </nav>
   </div>
 </div>
