--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require animate.min
  *= require bootstrap-datetimepicker.min
+ *= require bootstrap-table
  *= require selectize.paper
  *= require fullcalendar
  */
