--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -104,6 +104,12 @@ input[type="number"] {
   color: rgb(255, 255, 255) !important;
 }
 
+.bg-info {
+  background-color: hsl(189, 77%, 52%) !important;
+  background-repeat: repeat-x;
+  color: rgb(255, 255, 255) !important;
+}
+
 .tr-info {
   background-color: hsl(189, 77%, 52%) !important;
 }
