--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -114,16 +114,21 @@
               </bootstrap-tooltip>
             </td>
           <td>
-              <text v-for="t in ec2.security_groups">
+              <span v-for="t in ec2.security_groups" track-by="$index">
                 <bootstrap-tooltip :title="t.group_name">
                   <template slot="content">
-                    <a>{{t.group_id}}</a>, &nbsp
+                    <a>{{t.group_id}}</a>
+                    <span v-if="$index < max_sec_group">,</span>
                   </template>
                 </bootstrap-tooltip>
-              </text>
+              </span>
           </td>
-          <td><button href="#" role="button" class="btn btn-xs btn-default" data-toggle="modal">
-                <%= t 'infrastructures.btn.view_rules' %>
+          <td>
+              <button href="#view-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+                <%= glyphicon 'info-sign' %> <%= t 'infrastructures.btn.view_rules' %>
+              </button>
+              <button href="#" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+                Change Security Groups
               </button>
           </td>
         </tr>
@@ -131,6 +136,8 @@
     </table>
   </div>
 </div>
+
+<%= render 'infrastructures/modal/modal_view_rules' %>
 
 <div class="alert alert-danger col-xs-12" v-if="ec2.chef_error">
   <h4>Connection Error</h4>
