functionality was for change security groups

--- a/app/views/infrastructures/modal/_modal_view_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_view_rules.html.erb
@@ -1,5 +1,5 @@
 <%# modal for change schedule %>
-<div id="view-rules-modal" class="modal fade" role="dialog" aria-hidden="true">
+<div id="change-rules-modal" class="modal fade" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
