--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -127,7 +127,7 @@
               <button href="#view-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
                 <%= glyphicon 'info-sign' %> <%= t 'infrastructures.btn.view_rules' %>
               </button>
-              <button href="#" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+              <button href="#change-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
                 Change Security Groups
               </button>
           </td>
