added view rules tabpane and remaned modal to change rules

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -137,6 +137,7 @@
   </div>
 </div>
 
+<%= render 'infrastructures/modal/modal_change_rules' %>
 <%= render 'infrastructures/modal/modal_view_rules' %>
 
 <div class="alert alert-danger col-xs-12" v-if="ec2.chef_error">
