--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -1,53 +1,78 @@
+<div class="content">
+<h4>Security Groups associated with #{{physical_id}}</h4>
 
 <div class="row">
   <div class="span*">
     <table class="table table-bordered">
       <thead>
+      <!--Top headers-->
       <tr>
-        <th></th>
-        <th colspan="3">Col1</th>
+        <th rowspan="2">Description</th>
+        <th rowspan="2">Group ID</th>
+        <th class="text-center" colspan="3">Inbound</th>
+        <th class="text-center" colspan="3">Outbound</th>
       </tr>
+      <!--For inbound and outbound subheaders-->
       <tr>
-        <th></th>
-        <th>Sub1</th>
-        <th>Sub2</th>
-        <th>Sub3</th>
+        <!--<th>Type</th>-->
+        <th>Protocol</th>
+        <th>Port</th>
+        <th>Source</th>
+        <!--<th>Type</th>-->
+        <th>Protocol</th>
+        <th>Port</th>
+        <th>Source</th>
       </tr>
       </thead>
+      <!--Contents-->
       <tbody>
-      <tr>
-        <th rowspan="3">Row1</th>
-        <td>[-01234543333545]</td>
-        <td>[4567]</td>
-        <td>[1]</td>
-      </tr>
-      <tr>
-        <td>[1]</td>
-        <td>[456.789]</td>
-        <td>[2]</td>
-      </tr>
-      <tr>
-        <td>[0]</td>
-        <td>[1]</td>
-        <td>[0000789.0123]</td>
-      </tr>
-      <tr>
-        <th rowspan="3">Row1</th>
-        <td>[-01234543333545]</td>
-        <td>[4567]</td>
-        <td>[1]</td>
-      </tr>
-      <tr>
-        <td>[1]</td>
-        <td>[456.789]</td>
-        <td>[2]</td>
-      </tr>
-      <tr>
-        <td>[0]</td>
-        <td>[1]</td>
-        <td>[0000789.0123]</td>
-      </tr>
+      <template v-for="rule in rules_summary" track-by="$index">
+        <tr>
+          <th style="width: 20%" rowspan="{{rule.ip_permissions.length +1}}">{{rule.description}}</th>
+          <th rowspan="{{rule.ip_permissions.length +1}}">{{rule.group_id}}</th>
+        </tr>
+          <template v-for="(index, inbound) in rule.ip_permissions">
+            <!--First inbound-->
+            <template v-if="index == 0">
+              <tr>
+              <td>{{inbound.from_port}}</td>
+              <td>{{inbound.ip_protocol}}</td>
+              <!--Source IP-->
+              <td v-for="s in inbound.ip_ranges">{{s.cidr_ip}}</td>
+              <!--First Outbound-->
+              <template v-for="outbound in rule.ip_permissions_egress">
+                <td>{{outbound.from_port}}</td>
+                <td>{{outbound.ip_protocol}}</td>
+                <td v-for="v in inbound.ip_ranges">{{v.cidr_ip}}</td>
+              </template>
+              </tr>
+            </template>
+            <template v-else>
+              <tr>
+                <td>{{inbound.from_port}}</td>
+                <td>{{inbound.ip_protocol}}</td>
+                <!--Source IP-->
+                <td v-for="s in inbound.ip_ranges">{{s.cidr_ip}}</td>
+                <!--First Outbound-->
+                <template v-for="outbound in rule.ip_permissions_egress">
+                  <td>{{outbound.from_port}}</td>
+                  <td>{{outbound.ip_protocol}}</td>
+                  <td v-for="v in inbound.ip_ranges">{{v.cidr_ip}}</td>
+                </template>
+              </tr>
+            </template>
+          </template>
+
+      </template>
+
       </tbody>
     </table>
   </div>
+</div>
+
+<div class="col-md-12 col-sm-12">
+  <div v-if="!loading" class="form-actions-top">
+    <button @click="show_ec2()" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-arrow-left"></span> <%= t 'helpers.links.back' %></button>
+  </div>
+</div>
 </div>
